--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
           viewBox="0 0 24 24"
           xmlns="http://www.w3.org/2000/svg"
           data-test-id="button__close-sidebar"
-          class="close"
-        >
+          class="close">
           <path
             fill-rule="evenodd"
             clip-rule="evenodd"
